--- a/iOS/TasteSync/Classes/ViewControllers/RestaurantTab/RestaurantDetail/RestaurantDetailVC.xib
+++ b/iOS/TasteSync/Classes/ViewControllers/RestaurantTab/RestaurantDetail/RestaurantDetailVC.xib
@@ -34,8 +34,11 @@
                 <outlet property="view1" destination="13" id="52"/>
                 <outlet property="view2" destination="14" id="53"/>
                 <outlet property="view4" destination="16" id="54"/>
+                <outlet property="viewCall" destination="fKN-vi-Kys" id="xd4-pX-ELh"/>
                 <outlet property="viewDeal" destination="gDh-CV-qhg" id="4eI-i8-d5x"/>
+                <outlet property="viewHeader" destination="4sX-Gp-fO2" id="ERe-5g-7uk"/>
                 <outlet property="viewImage" destination="87" id="sQ5-ww-1JM"/>
+                <outlet property="viewMap" destination="9JV-1e-qRr" id="yme-Ep-ZBk"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -70,7 +73,7 @@
                     <rect key="frame" x="0.0" y="0.0" width="60" height="40"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="10"/>
-                    <state key="normal" image="655C738A-E7F1-42F8-B16F-785377412815">
+                    <state key="normal" image="CC943555-49C3-49F0-8AB6-A4502ADDE489">
                         <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
@@ -458,13 +461,86 @@
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                 </view>
+                <view contentMode="scaleToFill" id="4sX-Gp-fO2">
+                    <rect key="frame" x="80" y="0.0" width="160" height="44"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <subviews>
+                        <view hidden="YES" contentMode="scaleToFill" id="9JV-1e-qRr">
+                            <rect key="frame" x="27" y="2" width="57" height="42"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <subviews>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="cpz-V1-n32">
+                                    <rect key="frame" x="17" y="6" width="22" height="20"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                    <state key="normal" backgroundImage="ic_tab_newsfeed_on.png">
+                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                    </state>
+                                </button>
+                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Website" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="qAx-Hj-ZiI">
+                                    <rect key="frame" x="-2" y="24" width="61" height="21"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="12"/>
+                                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="dzH-Db-UzI">
+                                    <rect key="frame" x="2" y="-1" width="53" height="44"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                    <state key="normal">
+                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                    </state>
+                                    <connections>
+                                        <action selector="showDetails:" destination="-1" eventType="touchUpInside" id="cPW-x3-RL4"/>
+                                    </connections>
+                                </button>
+                            </subviews>
+                            <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                        </view>
+                        <view hidden="YES" contentMode="scaleToFill" id="fKN-vi-Kys">
+                            <rect key="frame" x="92" y="2" width="61" height="42"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <subviews>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="C6g-i6-qLU">
+                                    <rect key="frame" x="20" y="5" width="20" height="20"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                    <state key="normal" backgroundImage="call icon.png">
+                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                    </state>
+                                </button>
+                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Call" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="dys-Aw-D3B">
+                                    <rect key="frame" x="11" y="23" width="38" height="23"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="12"/>
+                                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="7fo-2t-k6v">
+                                    <rect key="frame" x="11" y="-1" width="38" height="44"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                    <state key="normal">
+                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                    </state>
+                                    <connections>
+                                        <action selector="callAction:" destination="-1" eventType="touchUpInside" id="l7a-RU-3hV"/>
+                                    </connections>
+                                </button>
+                            </subviews>
+                            <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                        </view>
+                    </subviews>
+                    <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                </view>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
         </view>
     </objects>
     <resources>
-        <image name="655C738A-E7F1-42F8-B16F-785377412815" width="30" height="30">
+        <image name="CC943555-49C3-49F0-8AB6-A4502ADDE489" width="30" height="30">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPj9YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQsLzI4O1UkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
@@ -580,6 +656,7 @@ AAAAAAAAAAAAGD8
         <image name="bg100.png" width="300" height="100"/>
         <image name="bg44.png" width="300" height="44"/>
         <image name="bg_deal.png" width="296" height="36"/>
+        <image name="call icon.png" width="30" height="30"/>
         <image name="ic_ask.png" width="30" height="30"/>
         <image name="ic_bt_addtomyfaves.png" width="30" height="30"/>
         <image name="ic_bt_back.png" width="30" height="30"/>
@@ -588,6 +665,7 @@ AAAAAAAAAAAAGD8
         <image name="ic_bt_share.png" width="30" height="30"/>
         <image name="ic_bt_viewmenu.png" width="30" height="30"/>
         <image name="ic_saved.png" width="30" height="30"/>
+        <image name="ic_tab_newsfeed_on.png" width="32" height="28"/>
         <image name="social-networks-foursquare.20131010231035.png" width="16" height="16"/>
         <image name="topbar2.png" width="320" height="44"/>
     </resources>
